# foxhole

./: Cargo.toml  README.md  deploy.sh  index.html  style.scss
docs/: foxhole-3d413b3047c68343.js  foxhole-3d413b3047c68343_bg.wasm  foxhole-52c15edfe970a111.js  foxhole-52c15edfe970a111_bg.wasm  foxhole-854cfb7264389a16.js  foxhole-854cfb7264389a16_bg.wasm  index.html  style-a65b21a0f1392be1.css  style-bfd1178c3ae4731c.css  style-e056c2dfa4c2e026.css
src/: main.rs
src/components/: bar.rs  cards.rs  edit.rs  greeting.rs  mod.rs
src/components/cards/: cards_ctx.rs  link_cards.rs  mod.rs
